Fixed app page having slight horizontal scroll.

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,6 +12,7 @@
   font-family: $font-family;
   margin: 0 auto;
   box-sizing: border-box;
+  overflow-x: hidden;
 
   @media (max-width: 768px) {
     width: 100%;
@@ -40,6 +41,7 @@
   gap: map.get($spacing-scale, 4);
   padding: 0 map.get($spacing-scale, 4);
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .mapChartRow {
