--- a/src/components/DataTable/DataTable.module.scss
+++ b/src/components/DataTable/DataTable.module.scss
@@ -13,6 +13,7 @@
   -webkit-overflow-scrolling: touch;
   margin: map.get($spacing-scale, 2) 0;
   max-width: 100%;
+  width: 100%;
 
   // Hide scrollbar
   scrollbar-width: none;
